testdata/baselines/reference/submodule/conformance/exportNestedNamespaces2.errors.txt
first.js(1,1): error TS2304: Cannot find name 'exports'.
first.js(2,1): error TS2304: Cannot find name 'exports'.
mod.js(2,1): error TS2304: Cannot find name 'exports'.
second.js(1,1): error TS2304: Cannot find name 'exports'.
second.js(2,1): error TS2304: Cannot find name 'exports'.
use.js(3,18): error TS2339: Property 'j' does not exist on type '{}'.
use.js(4,28): error TS2339: Property 'o' does not exist on type '{}'.


==== mod.js (1 errors) ====
    // Based on a pattern from adonis
    exports.formatters = {}
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
==== first.js (2 errors) ====
    exports = require('./mod')
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    exports.formatters.j = function (v) {
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
        return v
    }
==== second.js (2 errors) ====
    exports = require('./mod')
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    exports.formatters.o = function (v) {
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
        return v
    }
    
==== use.js (2 errors) ====
    import * as debug from './mod'
    
    debug.formatters.j
                     ~
!!! error TS2339: Property 'j' does not exist on type '{}'.
    var one = debug.formatters.o(1)
                               ~
!!! error TS2339: Property 'o' does not exist on type '{}'.
    